--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ solana-sdk = "1.15.2"
 bs58 = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+solana-client = "1.15.2"
