--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ bs58 = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 solana-client = "1.15.2"
+solana-program = "1.15.2"
